[package]
name = "bittorrent-rust-client"              # ✅ Rename to your own project name
version = "0.1.0"
edition = "2021"
description = "A minimal BitTorrent client built in Rust"
license = "MIT"
repository = "https://github.com/Aayushman00/bittorrent-rust-client"


[dependencies]
anyhow = "1.0.68"                                                  # ergonomic error handling with context support (e.g., `anyhow::Result`)
bytes = "1.3.0"                                                    # for managing and manipulating byte buffers (used in torrent data exchange)
clap = { version = "4.0.32", features = ["derive"] }               # command-line argument parser (for building CLI interfaces)
hex = "0.4.3"                                                      # for hex encoding/decoding (used in info-hash/logging)
regex = "1"                                                        # regular expressions (e.g., validating tracker URLs or parsing responses)
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # HTTP client for communicating with trackers (supports blocking & JSON)
serde = { version = "1.0.136", features = ["derive"] }             # serialization framework used by many formats like JSON, Bencode
serde_bencode = "0.2.3"                                            # for parsing `.torrent` files (Bencode format)
serde_bytes = "0.11.12"                                            # allows compact encoding of `Vec<u8>` as raw bytes (used in peer messages)
serde_json = "1.0.105"                                             # working with JSON (tracker responses or debug outputs)
serde_urlencoded = "0.7.1"                                         # for encoding tracker GET requests (URL query parameters)
sha1 = "0.10.1"                                                    # hashing (to compute info-hash and verify piece hashes)
tempfile = "3"                                                     # safely write downloaded pieces to temporary files before saving
thiserror = "1.0.38"                                               # derive-based custom error enums (used for clean error reporting)
tokio = { version = "1.23.0", features = ["full"] }                # async runtime (especially useful for multiple peer/tracker connections)
rand = "0.8"                                                       # used to generate random peer IDs or other randomized data

